--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/express-session": "^1.17.3",
     "@types/jsonwebtoken": "^8.3.7",
     "async": "^3.2.0",
+    "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -46,6 +47,7 @@
     "lusca": "^1.6.1",
     "mongodb-memory-server": "^6.3.1",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.3",
     "passport": "^0.4.1",
     "passport-facebook": "^3.0.0",
@@ -71,6 +73,7 @@
     "@types/jquery": "^3.3.33",
     "@types/lodash": "^4.14.149",
     "@types/lusca": "^1.6.1",
+    "@types/multer": "^1.4.5",
     "@types/node": "^12.12.28",
     "@types/node-sass": "^4.11.0",
     "@types/nodemailer": "^6.4.0",
