--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bcrypt-nodejs": "^0.0.3",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cloudinary": "^1.26.1",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
