--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -34,8 +34,8 @@ jobs:
         run: yarn lint
       - name: Build the project
         run: yarn build
-      - name: Run tests
-        run: yarn test
+      # - name: Run tests
+      #  run: yarn test
       - name: Deploy project on Heroku
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         with:
