--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
-    "express-flash": "0.0.2",
+    "express-flash": "^0.0.2",
     "express-session": "^1.17.0",
     "express-validator": "^6.4.0",
     "fbgraph": "^1.4.4",
@@ -70,7 +70,7 @@
     "@types/errorhandler": "^0.0.32",
     "@types/eslint": "^6.1.8",
     "@types/express": "^4.17.2",
-    "@types/express-flash": "0.0.1",
+    "@types/express-flash": "^0.0.2",
     "@types/jest": "^24.9.1",
     "@types/jquery": "^3.3.33",
     "@types/lodash": "^4.14.149",
@@ -86,7 +86,7 @@
     "@types/request": "^2.48.4",
     "@types/request-promise": "^4.1.45",
     "@types/shelljs": "^0.8.6",
-    "@types/supertest": "^2.0.8",
+    "@types/supertest": "^2.0.11",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
